...
    
    @State private var calendarSelectedDate: Date = Date()
    
    enum TimeInterval: String, CaseIterable, Identifiable {
        case month = "Last month"
        case month3 = "Last 3 months"
        case custom = "Custom"
        
        var id: Self { return self }
    }
    
    var body: some View {
        VStack() {
...
