...
                }
            
            VStack {
                Text("Your weight goal")
                    .font(.title3)
                    .bold()
                    .accessibilityIdentifier("GoalDialogTitle")
                
                HStack {
                    Picker("Goal", selection: $weight) {
                        ForEach(50...100, id: \.self) { number in
                            Text("\(number)")
                        }
...
                Button {
                    weightDataHandler.saveNewGoal(goal: weight.description)
                    isActive = false
                } label: {
                    Text("Done")
                }
                .accessibilityIdentifier("GoalDialogDoneButton")
                .frame(maxWidth: .infinity)
                .padding(.vertical, 10)
                .padding(.horizontal, 10)
                .background(.thinMaterial)
                
            }
...
