...
            .foregroundColor(.black)
            .padding(.vertical, 5)
            .frame(maxWidth: .infinity)
            .background(.white)
            .padding(.horizontal, 10)
        }
        .accessibilityIdentifier("goalView")
    }
    
}

struct HealthAppSyncView: View {
    
...
